lua_configuration/networking.istio.io/VirtualService/testdata/test_case.yaml
rollout: 
  apiVersion: rollouts.kruise.io/v1alpha1
  kind: Rollout
  metadata:
    name: rollouts-demo
    namespace: demo
    annotations:
      rollouts.kruise.io/rolling-style: canary
  spec:
    disabled: false
    objectRef:
      workloadRef:
        apiVersion: apps/v1
        kind: Deployment
        name: nginx-deployment
    strategy:
      canary:
        steps:
        - weight: 20
          matches:
          - headers:
            - type: Exact
              name: user-agent
              value: pc
            - type: RegularExpression
              name: name
              value: ".*demo"
        - weight: 50
        trafficRoutings:
        - service: nginx-service
          networkRefs:
          - apiVersion: networking.istio.io/v1alpha3
            kind: VirtualService
            name: nginx-vs
original:
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: nginx-vs
    namespace: demo
  spec:
    hosts:
    - "*"
    gateways:
    - nginx-gateway
    http:
    - route:
      - destination:
          host: nginx-service
expected:
  - apiVersion: networking.istio.io/v1alpha3
    kind: VirtualService
    metadata:
      name: nginx-vs
      namespace: demo
    spec:
      hosts:
      - "*"
      gateways:
      - nginx-gateway
      http:
      - match:
        - headers:
            user-agent:
              exact: pc
            name:
              regex: .*demo
        route:
        - destination:
            host: nginx-service
          weight: 80
        - destination:
            host: nginx-service-canary
          weight: 20
      - route:
        - destination:
            host: nginx-service
  - apiVersion: networking.istio.io/v1alpha3
    kind: VirtualService
    metadata:
      name: nginx-vs
      namespace: demo
    spec:
      hosts:
      - "*"
      gateways:
      - nginx-gateway
      http:
      - route:
        - destination:
            host: nginx-service
          weight: 50
        - destination:
            host: nginx-service-canary
          weight: 50
