lua_configuration/networking.istio.io/VirtualService/testdata/test_case1.yaml
matches:
spec:
  hosts:
  - details
  http:
  - route:
    - destination:
        host: details
        subset: v1
nSpec:
  hosts:
  - details
  http:
  - route:
    - destination:
        host: details
        subset: v1
        weight: 90
    - destination:
        host: details-canary
        weight: 10
stableService: details
canaryService: details-canary
stableWeight: 90
canaryWeight: 10
