lua_configuration/networking.istio.io/VirtualService/testdata/traffic_routing_with_matches.yaml
trafficRouting:
  apiVersion: rollouts.kruise.io/v1alpha1
  kind: TrafficRouting
  metadata:
    name: tr-demo
  spec:
    strategy:
      matches:
      - headers:
        - type: Exact
          name: user-agent
          value: pc
      - headers:
        - type: RegularExpression
          name: name
          value: ".*demo"
    objectRef:
    - service: svc-demo
      customNetworkRefs:
      - apiVersion: networking.istio.io/v1alpha3
        kind: VirtualService
        name: vs-demo
      additionalParams:
        istio.destinationRule.stableSubsetName: "base"
        istio.destinationRule.canarySubsetName: "canary"
original:
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: vs-demo
  spec:
    hosts:
    - "*"
    gateways:
    - nginx-gateway
    http:
    - route:
      - destination:
          host: svc-demo
          subset: base
expected:
  - apiVersion: networking.istio.io/v1alpha3
    kind: VirtualService
    metadata:
      name: vs-demo
    spec:
      hosts:
      - "*"
      gateways:
      - nginx-gateway
      http:
      - match:
        - headers:
            name:
              regex: .*demo
        route:
        - destination:
            host: svc-demo
            subset: canary
      - match:
        - headers:
            user-agent:
              exact: pc
        route:
        - destination:
            host: svc-demo
            subset: canary
      - route:
        - destination:
            host: svc-demo
            subset: base
