lua_configuration/networking.istio.io/VirtualService/testdata/expected_1.yaml
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: nginx-vs
    namespace: demo
  spec:
    hosts:
    - "*"
    gateways:
    - nginx-gateway
    http:
    - match:
      - headers:
          user-agent:
            exact: pc
          name:
            regex: .*demo
      route:
      - destination:
          host: nginx-service-canary
        weight: 20
      - destination:
          host: nginx-service
        weight: 80
    - route:
      - destination:
          host: nginx-service
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: nginx-vs
    namespace: demo
  spec:
    hosts:
    - "*"
    gateways:
    - nginx-gateway
    http:
    - match:
      - headers:
          user-agent:
            exact: pc
          name:
            regex: .*demo
      route:
      - destination:
          host: nginx-service-canary
    - route:
      - destination:
          host: nginx-service
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: nginx-vs
    namespace: demo
  spec:
    hosts:
    - "*"
    gateways:
    - nginx-gateway
    http:
    - match:
      - headers:
          name:
            regex: .*demo
      route:
      - destination:
          host: nginx-service-canary
    - match:
      - headers:
          user-agent:
            exact: pc
      route:
      - destination:
          host: nginx-service-canary
    - route:
      - destination:
          host: nginx-service
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: nginx-vs
    namespace: demo
  spec:
    hosts:
    - "*"
    gateways:
    - nginx-gateway
    http:
    - route:
      - destination:
          host: nginx-service
        weight: 50
      - destination:
          host: nginx-service-canary
        weight: 50
